--- a/page_a.html
+++ b/page_a.html
@@ -8,5 +8,6 @@
         <body>
         <p>Esto es un párrafo</p>
         <h1>Esto es un header</h1>
+        <img src="https://cdn7.kiwilimon.com/brightcove/8631/640x640/8631.jpg.webp">
         </body>
 </html>
