--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script.js"></script>
     <title>Inicio P01</title>
     </head>
         <body>
