--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
         <body>
         <p>Esto es un párrafo</p>
-        <h1>Esto es un header</h1>
+        <h1>Esto es un header.</h1>
         </body>
 </html>
